Fixed Header, Nav Links and Slider Fixed
A header with fixed property has been fixed, navigation links are fixed however remapping is needed to the URI. The slider is fixed as this tends to get overlapped by the header and nav bar so a spacer div is used to overcome the problem. A bit of sliders image is oversized then it is supposed to be in the container-fluid div, need to fix and refine at the end.

--- a/assets/front/style.css
+++ b/assets/front/style.css
@@ -2,20 +2,69 @@
 	margin: 0px;
 	max-height: 60px;
 	padding: 10px;
-	background-color: #110011;
+	background-color: #f4d942;
+	border-bottom-left-radius: 0; 
+	border-bottom-right-radius: 0;
 }
 
 .jumbotron h5{
-	color: red;
+	color: #0fa870;
 	padding-bottom:20px;
 	margin:0px;
 }
 
-#toShow{
-	
-	position: fixed;
+.navs{
+	background-color: #f4d942;
 
 }
+
+#toShow{
+	
+	z-index: 9;
+	position: fixed;
+	clear: both;
+}
+
+.navs .navbar-toggler{
+	background-color: #808e003b;
+}
+
+.navbar-toggler .navbar-toggler-icon{
+	background-image: url(../images/hambug.svg);
+}
+
+#fixHeader{
+	height: 116px;
+}
+
+#home{
+	z-index: 8;
+	width: 97%;
+	margin-left: 1.5%;
+	margin-right: 1.5%;
+}
+
+#about{
+	z-index: 7;
+	
+
+}
+
+#doctors{
+	z-index: 6;
+
+}
+
+#services{
+	z-index: 5;
+
+}
+
+#contact{
+	z-index: 4;
+
+}
+
 
 
 /* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
@@ -23,6 +72,14 @@
   h5 {
     font-size: 2em;
   }
+
+
+  .container-fluid{
+	width: 80%;
+	margin-right: 10%;
+	margin-left: 10%;
+}
+
 }
 
 /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
@@ -35,7 +92,14 @@
   .jumbotron {
 	margin: 0px;
 	max-height: 50px;
-	
 }
+
+
+.container-fluid{
+	width: 96%;
+	margin-right: 2%;
+	margin-left: 2%;
+
+
 }
 
